[FIX] #552 java 11 지원 안되는 메소드 변경