@@ -1,6 +1,7 @@
 package gg.recruit.api.user.controller.response;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import gg.data.recruit.recruitment.enums.InputType;
 import gg.recruit.api.user.service.response.FormDetailSvcDto;
@@ -19,6 +20,6 @@ public class FormDetailResDto {
 		this.questionId = dto.getQuestionId();
 		this.question = dto.getQuestion();
 		this.inputType = dto.getInputType();
-		this.checkList = dto.getCheckList().stream().map(CheckItemResDto::new).toList();
+		this.checkList = dto.getCheckList().stream().map(CheckItemResDto::new).collect(Collectors.toList());
 	}
 }
